syntax = "proto3";

option go_package = "../pb;pb";

import "google/protobuf/timestamp.proto";

service LikeService {
  rpc CreateLike(CreateLikeRequest) returns (CreateLikeResponse) {}

  rpc GetLikeByArticleId(GetLikeByArticleIdRequest) returns (GetLikeByArticleIdResponse) {}

}

message Like {
    int32 id = 1;
    int32 article_id = 2;
    int32 liker_id = 3;

    // 创建时间
    google.protobuf.Timestamp create_time = 4;
    // 更新时间
    google.protobuf.Timestamp update_time = 5;
}

message CreateLikeRequest {
    int32 article_id = 1;
    int32 liker_id = 2;
}

message CreateLikeResponse {
    Like like = 1;
}

message GetLikeByArticleIdRequest {
    int32 id = 1;
}

message GetLikeByArticleIdResponse {
    repeated Like likes = 1;
}
